# Undertone

./: Cargo.toml  PROGRESS.md  README.md
crates/undertone-core/src/: command.rs  state.rs
crates/undertone-daemon/: Cargo.toml
crates/undertone-daemon/src/: main.rs  server.rs
crates/undertone-db/src/: lib.rs  migrations.rs  queries.rs  schema.rs
crates/undertone-effects/: Cargo.toml
crates/undertone-effects/src/: chain.rs  effects.rs  lib.rs  presets.rs
crates/undertone-hid/examples/: wavexlr_probe.rs
crates/undertone-hid/src/: alsa_fallback.rs  device.rs  device_trait.rs  lib.rs  wavexlr.rs
crates/undertone-ipc/src/: messages.rs
crates/undertone-pipewire/src/: filter_chain.rs  lib.rs
packaging/: README.md  install.sh
packaging/desktop/: undertone.desktop
packaging/systemd/: undertone-daemon.service
packaging/udev/: 70-undertone-elgato.rules
undertone-tauri/: README.md  package-lock.json  package.json
undertone-tauri/src/: App.css  App.tsx
undertone-tauri/src-tauri/: Cargo.toml  tauri.conf.json
undertone-tauri/src-tauri/src/: lib.rs  main.rs
undertone-tauri/src/components/: EffectsPanel.tsx  SettingsPanel.tsx
