[workspace]
resolver = "2"
members = [
    "crates/undertone-daemon",
    "crates/undertone-core",
    "crates/undertone-pipewire",
    "crates/undertone-db",
    "crates/undertone-ipc",
    "crates/undertone-hid",
    "crates/undertone-ui",
    "crates/undertone-effects",
]

[workspace.package]
version = "0.1.5"
edition = "2024"
rust-version = "1.92"
authors = ["polariscli"]
license = "GPL-3.0"
repository = "https://github.com/polariscli/Undertone"
description = "Linux-native Elgato Wave:3 audio control application"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "sync", "signal", "net", "io-util", "fs", "time"] }

# PipeWire bindings
pipewire = "0.9"
libspa = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = "0.6"

# IPC
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.9"

# HID (optional)
hidapi = { version = "2.6", features = ["linux-native"] }
rusb = "0.9"

# Qt UI (cxx-qt)
cxx-qt = "0.7"
cxx-qt-lib = { version = "0.7", features = ["qt_gui", "qt_qml", "qt_quickcontrols"] }
cxx-qt-lib-extras = "0.7"
cxx = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
parking_lot = "0.12"
arc-swap = "1.7"
directories = "6.0"
futures = "0.3"

# Testing
tokio-test = "0.4"
tempfile = "3.19"
assert_matches = "1.5"
mockall = "0.13"
proptest = "1.6"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
